! popup.css - new hmenu styles + $("a.clrBtn").on("keypress click") - clear filter button + var _getMsg = browser.i18n.getMessage;

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -9,11 +9,13 @@ body
 	/*max-height: 700px;*/
 }
 
-#hmenu .nav-bar 
+/*#hmenu .nav-bar 
 { 
-	list-style:none; margin-top: 0px; 
+	list-style:none; 
+	margin-top: 0px; 
 	padding-left: 0px;
 	height: 5px;
+	justify-content: space-between;
 }
 
 #hmenu .nav-bar li 
@@ -24,70 +26,105 @@ body
 
 #hmenu .nav-bar li a 
 {
-  /*text-decoration: none; */
+  /*text-decoration: none; 
   padding-left: 24px;
-/*   text-transform: uppercase; */
-/*   color: #333; */
-/* 	text-shadow: 1px 1px 1px #ccc; */
+
+}*/
+
+#hmenu .nav-bar  {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+/* 	height: 26px; */
+    display: table;
+    table-layout: fixed;
+    overflow: hidden
 }
+#hmenu .nav-bar li {
+  display: table-cell;
+  height: 24px;
+  text-align: center;
+	margin: 0;
+	padding: 0;
+}
+#hmenu .nav-bar li:first-child {
+  padding-left: 10px;
+}
+#hmenu .nav-bar li a {
+  width: 22px;
+  display: block;
+  height: 22px;
+	padding: 1px;
+	margin: 0;
+  text-decoration: none;
+}
+#hmenu .nav-bar li a.hmenuBtn:hover {
+  background-color: #d7ebf9;
+  color: #ddeeee;
+	height: 20px;
+	border:thin solid gray;
+	border-radius: 4px;
+}
+
 
 .nav-bar .hmenuRefresh a 
 { 
-	background:url("../images/update.png") no-repeat 0px 0px transparent; 
+	background:url("../images/update.png") no-repeat center center transparent; 
 }
 
 .nav-bar .hmenuAdd a 
 { 
-	background:url("../images/bkmrk_add_on.png") no-repeat 0px 0px transparent; 
+	background:url("../images/bkmrk_add_on.png") no-repeat center center transparent; 
 }
 
 .nav-bar .hmenuAdd a.disabled-link 
 { 
-	background:url("../images/bkmrk_add_off.png") no-repeat 0px 0px transparent; 
+	background:url("../images/bkmrk_add_off.png") no-repeat center center transparent; 
 	pointer-events: none;
 }
 
 .nav-bar .hmenuEdit a 
 { 
-	background:url("../images/bkmrk_edit_on.png") no-repeat 0px 0px transparent; 
+	background:url("../images/bkmrk_edit_on.png") no-repeat center center transparent; 
 }
 
 .nav-bar .hmenuEdit a.disabled-link 
 { 
-	background:url("../images/bkmrk_edit_off.png") no-repeat 0px 0px transparent; 
+	background:url("../images/bkmrk_edit_off.png") no-repeat center center transparent; 
 	pointer-events: none;
 }
 
 .nav-bar .hmenuDel a 
 { 
-	background:url("../images/bkmrk_delete_on.png") no-repeat 0px 0px transparent; 
+	background:url("../images/bkmrk_delete_on.png") no-repeat center center transparent; 
 }
 
 .nav-bar .hmenuDel a.disabled-link
 { 
-	background:url("../images/bkmrk_delete_off.png") no-repeat 0px 0px transparent; 
+	background:url("../images/bkmrk_delete_off.png") no-repeat center center transparent; 
 	pointer-events: none;
 }
 
 .nav-bar .hmenuAddOpenTabs a 
 { 
-	background:url("../images/add_open_tabs.png") no-repeat 0px 0px transparent; 
+	background:url("../images/add_open_tabs.png") no-repeat center center transparent; 
 }
 .nav-bar .hmenuOpt a 
 { 
-	background:url("../images/setting_tools.png") no-repeat 0px 0px transparent; 
+	background:url("../images/setting_tools.png") no-repeat center center transparent; 
 }
 .nav-bar .hmenuGBs a 
 { 
-	background:url("../images/star.png") no-repeat 0px 0px transparent; 
+	background:url("../images/star.png") no-repeat center center transparent; 
 }
 .nav-bar .hmenuFFbookmark a 
 { 
-	background:url("../images/import_export.png") no-repeat 0px 0px transparent; 
+	background:url("../images/import_export.png") no-repeat center center transparent; 
 }
 .nav-bar .menuAbout a 
 { 
-	background:url("../images/About_icon.png") no-repeat 0px 0px transparent; 
+	background:url("../images/About_icon.png") no-repeat center center transparent; 
 }
 .nav-bar .hmenuLgn a 
 { 
@@ -98,6 +135,11 @@ body
 	 display: none;
 }
 
+.clrBtn 
+{
+	background:url("../images/clrFilter.svg") no-repeat center center transparent; 
+}
+
 #wrapper{
 	width: 350px;
 	/*height: 450px;*/
@@ -106,7 +148,8 @@ body
 div.filterHBox{
     padding:0.1em;
     margin:0.1em;
-    width: 330px;
+    width: 360px;
+    display: flex;
 }
 
 div.filterHBox label{
@@ -116,10 +159,11 @@ div.filterHBox label{
     font-size: 10pt;
 }
 
-div.filterHBox span{
-    display: block;
+div.filterHBox span.first {
+    display: flex;
+    width:90%;
     overflow: hidden;
-    padding-right: 20px;
+    padding-right: 0px;
     padding-top: 1px;
 }
 
@@ -130,6 +174,18 @@ div.filterHBox input{
     background: url("../images/searchicon.png") no-repeat 99% center;
     /*background: url("../images/searchicon.png") no-repeat right center;*/
     font-size: 11pt;
+}
+
+div.filterHBox span:last-child{
+    display: flex;
+    margin: 0 5px;
+		padding-right: 2px;
+		width: 10%;
+}
+
+a.clrBtn {
+	width: 18px;
+	display: none;
 }
 
 .filterHBox-clear {
