--- a/popup/popup.css
+++ b/popup/popup.css
@@ -234,7 +234,7 @@ ul.fancytree-container {
   overflow-x: hidden;;
   overflow-y: auto!important;
   position: relative!important;
-
+/*background-color: #E8FDFB!important;*/
 }
 
 .dialog {
