! css fixex (font, width...)

--- a/popup/popup.css
+++ b/popup/popup.css
@@ -1,7 +1,10 @@
 body 
 { 
-	font-family: sans-serif; 
+	/*font-family: sans-serif; */
 	/*min-width:  350px;*/
+	font-family: Tahoma;
+	font-size: 11px;
+	font-weight: 400;
 	width:  100%;
 	height:  100%;
 	overflow: hidden;
@@ -157,14 +160,14 @@ body
 }
 
 #wrapper{
-	width: 350px;
+	width: 300px;
 	/*height: 450px;*/
 }
 
 div.filterHBox{
     padding:0.1em;
     margin:0.1em;
-    width: 360px;
+    width: 310px;
     display: flex;
 }
 
@@ -172,7 +175,7 @@ div.filterHBox label{
     float:left;
     margin-right:5px;
     padding: 4px 0;
-    font-size: 10pt;
+/*    font-size: 10pt;*/
 }
 
 div.filterHBox span.first {
@@ -189,7 +192,7 @@ div.filterHBox input{
     border:thin solid gray;
     background: url("../images/searchicon.png") no-repeat 99% center;
     /*background: url("../images/searchicon.png") no-repeat right center;*/
-    font-size: 11pt;
+/*    font-size: 11pt;*/
 }
 
 div.filterHBox span:last-child{
@@ -233,7 +236,7 @@ a.clrBtn {
 
 .info-box label, .error-box label {
 	margin-left: 5px;
-	font-size: 10pt;
+/*	font-size: 10pt;*/
 	flex: 1;
 }
 
@@ -257,6 +260,9 @@ ul.fancytree-container {
   overflow-x: hidden;;
   overflow-y: auto!important;
   position: relative!important;
+  font-family: inherit!important;
+	font-size: inherit!important;
+	font-weight: inherit!important;
 /*background-color: #E8FDFB!important;*/
 }
 
@@ -277,11 +283,13 @@ ul.fancytree-container {
 }
 
 .ui-dialog {
-	font-size: 10pt;
+/*	font-size: 10pt;*/
+	font-size: inherit!important;
 }
 
 .ui-menu {
-	font-size: 0.75em;
+	font-size: 12px;
+/*	font-size: 0.75em;*/
 	border-radius: 6px;
 	width: 270px;
 }
@@ -370,7 +378,7 @@ mark.markNote, mark.markUrl {
 	padding: 0 3px;
 	margin: 0 3px;
 	border-radius: 4px;
-	font-size: 0.75em;
+/*	font-size: 0.75em;*/
 	padding-bottom: 1px;
 }
 
@@ -400,7 +408,7 @@ div.tabsList {
 }
 
 .divTable.tabsList .divTableBody .divTableCell {
-  font-size: 0.8em;
+/*  font-size: 0.8em;*/
 }
 .divTable.tabsList .divTableHeading {
   background: #D7EBF9;
@@ -410,7 +418,7 @@ div.tabsList {
   border-bottom: 3px solid #aed0ea;
 }
 .divTable.tabsList .divTableHeading .divTableHead {
-  font-size: 0.8em;
+/*  font-size: 0.8em;*/
   font-weight: bold;
   color: #222;
   text-align: center;
@@ -421,7 +429,7 @@ div.tabsList {
 }
 
 .tabsList .tableFootStyle {
-  font-size: 14px;
+/*  font-size: 14px;*/
 }
 /* DivTable.com */
 .divTable{ 
