--- a/options/options.css
+++ b/options/options.css
@@ -99,5 +99,99 @@ fieldset {
   margin-bottom: 5px;
 }
 
+.radioContainer{
+/*   display: block; */
+/*   position: relative; */
+/*   margin: 40px auto; */
+/*   height: auto; */
+/*   width: 500px; */
+/*   padding: 5px; */
+}
 
+.radioContainer ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: auto;
+}
 
+.radioContainer ul li{
+/*   color: #AAAAAA; */
+  display: block;
+  position: relative;
+  float: left;
+  width: 100%;
+}
+
+ul li input[type=radio]{
+  position: absolute;
+  visibility: hidden;
+}
+
+ul li label{
+  display: block;
+  position: relative;
+  padding: 3px 10px 4px 30px;
+  margin: 5px auto;
+  height: 12px;
+  z-index: 9;
+  cursor: pointer;
+  -webkit-transition: all 0.25s linear;
+/*   font-size: 0.83em; */
+}
+
+#iconLightLbl {
+  background: url("../images/Star_empty_iconset.png") no-repeat 30px center;
+}
+
+#iconDarkLbl {
+  background: url("../images/Star_empty_iconset1.png") no-repeat 30px center;
+}
+
+ul li:hover label{
+/*   color: #AAAAAA; */
+}
+
+ul li .check{
+  display: block;
+  position: absolute;
+  border: 3px solid #ccc;
+  border-radius: 100%;
+  height: 15px;
+  width: 15px;
+  top: 5px;
+  left: 5px;
+  z-index: 5;
+  transition: border .25s linear;
+  -webkit-transition: border .25s linear;
+}
+
+ul li:hover .check {
+  border: 3px solid #AAAAAA;
+}
+
+ul li .check::before {
+  display: block;
+  position: absolute;
+  content: '';
+  border-radius: 100%;
+  height: 9px;
+  width: 9px;
+  top: 3px;
+  left: 3px;
+  margin: auto;
+  transition: background 0.25s linear;
+  -webkit-transition: background 0.25s linear;
+}
+
+input[type=radio]:checked ~ .check {
+  border: 3px solid #2196F3;
+  background-color: #fff;
+}
+input[type=radio]:checked ~ .check::before{
+  background: #2196F3;
+}
+
+/* input[type=radio]:checked ~ label{
+  color: #2196F3;
+} */
