--- a/popup/popup.css
+++ b/popup/popup.css
@@ -2,7 +2,7 @@ html, body
 { 
 	/*font-family: sans-serif; */
 	/*min-width:  350px;*/
-	font-family: Tahoma;
+	font-family: Tahoma, "Ubuntu", "Geneva CY", sans-serif;
 	font-size: 11px;
 	font-weight: 400;
 	/*width:  100%;*/
@@ -13,28 +13,6 @@ html, body
 	/*min-height: 550px;*/
 	/*max-height: 700px;*/
 }
-
-/*#hmenu .nav-bar 
-{ 
-	list-style:none; 
-	margin-top: 0px; 
-	padding-left: 0px;
-	height: 5px;
-	justify-content: space-between;
-}
-
-#hmenu .nav-bar li 
-{ 
-	display:inline; padding:0 0; 
-	font-size: 10pt;
-}
-
-#hmenu .nav-bar li a 
-{
-  /*text-decoration: none; 
-  padding-left: 24px;
-
-}*/
 
 #hmenu .nav-bar  {
     list-style: none;
