--- a/options/options.css
+++ b/options/options.css
@@ -80,14 +80,18 @@ input:checked + .slider:before {
 
 fieldset legend{
   font-size: 0.83em;
+  margin: 5px 5px;
 } 
+
+fieldset label {
+  font-size: 0.83em;
+}
 
 .fRow {
   display: flex;
   height: 2.5em;
   align-items: center;
   font-size: 0.83em;
-  
 }
 
 #optForm label, select {
